config/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: {{.Values.appName}}
    application: {{.Values.appName}}
    createdBy: ZCVV
  name: {{.Values.appName}}
  namespace: tst-namespace-default
  resourceVersion: "60323"
  uid: b699052f-e1f1-46ae-a941-b166d1214db4
spec:
  host: {{.Values.routerHost}}
  port:
    targetPort: 8080-tcp
  tls:
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIID4zCCAsugAwIBAgIUP590YZ20IqHJ5RKfjFm5Q6NuCiAwDQYJKoZIhvcNAQEL
[...]
      XE1vb3nh+LjXlzCMm49rcWfWzeg7g4y4W+psz8IooMb1FxDCfzJ6
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQC/Y24FA5aBRMdv
[...]
      A+Emyu1UuOlhctm3FWoTJVZI
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: {{.Values.appName}}
    weight: 100
  wildcardPolicy: None
